[project]
name = "qwen-lora-summarization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "peft>=0.15.0",
    "torch>=2.9.1",
    "transformers>=4.45.0",
    "trl>=0.25.1",
]

[dependency-groups]
dev = [
    "notebook>=7.5.0",
]
